<resources>
    <string name="app_name">MobileApp</string>
    <string name="mainpage">MainPage</string>
    <string name="launch">Launch</string>
    <string name="textview">TextView</string>
    <string name="second_activity">Second Activity</string>
    <string name="todo">TODO</string>
    <string name="secondactivity">SecondActivity</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">Save</string>
    <string name="change_name">Change Name</string>
    <string name="name">Name</string>
    <string name="word">word</string>
    <string name="translation">translation</string>
    <string name="all_words">All Words</string>
    <string name="add_your_word">Add your word</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="quick_translate">Quick Translate</string>
    <string name="translate">Translate</string>
    <string name="add">Add</string>
</resources>